--- a/Frontend-ProInvest/Frontend-ProInvest.csproj
+++ b/Frontend-ProInvest/Frontend-ProInvest.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Frontend_ProInvest</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
