Corregí uso de CSS y agregué uso de clases de Bootstrap para CU Simular inversión, agregué modelo para paso 1 de formulario. Agregué interfaz gráfica responsiva para paso 1 de formulario con validaciones.

--- a/Frontend-ProInvest/Frontend-ProInvest.csproj
+++ b/Frontend-ProInvest/Frontend-ProInvest.csproj
@@ -11,4 +11,8 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+  </ItemGroup>
+
 </Project>
