Avance CU02 Agregué navegación entre parte 1 y GUI Verificación del CU02. Arreglé error en validación de empresa en el viewmodel de datos personales. Inicio del paso 3 Domicilio (avance en viewmodel)

--- a/Frontend-ProInvest/Frontend-ProInvest.csproj
+++ b/Frontend-ProInvest/Frontend-ProInvest.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Views\Formulario\Formulario.css" />
+    <Content Include="Views\Home\GraficaSimulacion.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
