--- a/Frontend-ProInvest/appsettings.Development.json
+++ b/Frontend-ProInvest/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista"
 }
