--- a/Frontend-ProInvest/appsettings.json
+++ b/Frontend-ProInvest/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista"
 }
