--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Frontend-ProInvest/appsettings.json
+/Frontend-ProInvest/appsettings.Development.json
