Interfaz de inicio sesion completa con validaciones, sin probar con api

--- a/Frontend-ProInvest/appsettings.Development.json
+++ b/Frontend-ProInvest/appsettings.Development.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista"
+  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
+  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin"
 }
