--- a/Frontend-ProInvest/appsettings.Development.json
+++ b/Frontend-ProInvest/appsettings.Development.json
@@ -7,5 +7,5 @@
   },
   "AllowedHosts": "*",
   "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
-  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin"
+  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin"
 }
