--- a/Frontend-ProInvest/appsettings.json
+++ b/Frontend-ProInvest/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista"
+  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
+  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin"
 }
