--- a/Frontend-ProInvest/appsettings.Development.json
+++ b/Frontend-ProInvest/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
-  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin"
+  "UrlWebAPIInversionista": "https://apiproinvest.azurewebsites.net/apiproinvest/inversionista",
+  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin"
 }
