--- a/Frontend-ProInvest/Frontend-ProInvest.csproj
+++ b/Frontend-ProInvest/Frontend-ProInvest.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.301" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.305.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
