--- a/Frontend-ProInvest/appsettings.json
+++ b/Frontend-ProInvest/appsettings.json
@@ -7,5 +7,9 @@
   },
   "AllowedHosts": "*",
   "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
-  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin"
+  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin",
+  "AWS": {
+    "AccessKey": "AKIA4IEIKBZLOMDTHT7G",
+    "SecretKey": "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"
+  }
 }
