--- a/Frontend-ProInvest/appsettings.json
+++ b/Frontend-ProInvest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "UrlWebAPIInversionista": "https://apiproinvest.azurewebsites.net/apiproinvest/inversionista",
-  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin"
+  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin",
   "AWS": {
     "AccessKey": "AKIA4IEIKBZLOMDTHT7G",
     "SecretKey": "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"
