--- a/Frontend-ProInvest/appsettings.json
+++ b/Frontend-ProInvest/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlWebAPIInversionista": "https://apiproinvest.azurewebsites.net/apiproinvest/inversionista",
-  "UrlWebAPIAdministrador": "https://apiproinvest.azurewebsites.net/apiproinvest/admin",
+  "UrlWebAPIInversionista": "http://localhost:8081/apiproinvest/inversionista",
+  "UrlWebAPIAdministrador": "http://localhost:8081/apiproinvest/admin",
   "AWS": {
     "AccessKey": "AKIA4IEIKBZLOMDTHT7G",
     "SecretKey": "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"
